# xmppbot

./: .gitignore  Model.hs  README.md  bot.yml.example  feed.yml.example  main.hs  xmppbot.cabal
Xmppbot/: Feed.hs  Greeting.hs  Translate.hs  Twitter.hs
config/: bot.yml.example
