name:                xmppbot
version:             1.20140101
synopsis:            Pipe feeds/tweets to gtalk, can also translate/greet.
-- description:
homepage:            https://github.com/rnons/xmppbot
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmppbot
    main-is: main.hs
    -- other-modules:
    other-extensions:    FlexibleContexts, GADTs, QuasiQuotes, TemplateHaskell, TypeFamilies, DeriveGeneric, OverloadedStrings
    build-depends:    base == 4.*
                    , aeson >= 0.6
                    , askitter
                    , attoparsec >= 0.10
                    , bytestring >= 0.9
                    , data-default >= 0.5
                    , fast-logger >= 2.0
                    , feed >= 0.3
                    , http-types >= 0.8
                    , http-conduit >= 2.0
                    , hoauth >= 0.3
                    , persistent-template >= 1.2
                    , persistent >= 1.2
                    , persistent-postgresql >= 1.2
                    , pontarius-xmpp
                    , random >= 1.0
                    , text >= 0.11
                    , tls
                    , tls-extra
                    , unordered-containers >= 0.2
                    , utf8-string >= 0.3
                    , wai-logger >= 2.0
                    , yaml >= 0.8
                    , yaml-config
    -- hs-source-dirs:
    default-language:    Haskell2010
